# car_image_processor

./: .gitignore  README.md  aesthetic.ipynb  aesthetic_scorer.py  captioning_renders.ipynb  get_stanford_car.ipynb  load_car_model.ipynb  main.py  monitoring_utils.py  process_car_data.py  process_combined_car_models.ipynb  pyproject.toml  requirements.txt
DownloadData/: download_data.ipynb  download_data.py
notebooks/Unit 3 - Vision Transformers/: transfer-learning-image-classification.ipynb
postprocessing/: README.md  batch_processing_debug.ipynb  batch_vehicle_processor.py  batch_vehicle_segmentation.ipynb  enhanced_vehicle_processor.py  legacy_car_processor.py  vehicle_segmentation_test.ipynb  yolo_batch_segmentation.md
